Use URI.create and StandardCharsets.UTF_8